{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 171,
  "lineage": "40ba5d90-69aa-babe-2a89-973bb167d369",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:internet-gateway/igw-0354b82564b4830b8",
            "id": "igw-0354b82564b4830b8",
            "owner_id": "330214284546",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-igw",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-igw",
              "Project": "cs6650-final"
            },
            "vpc_id": "vpc-01706b50151581940"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cart_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/cs6650-final-alb/4d30102c99b6d164",
            "arn_suffix": "app/cs6650-final-alb/4d30102c99b6d164",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cs6650-final-alb-732441295.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/cs6650-final-alb/4d30102c99b6d164",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cs6650-final-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082deb49880308f77"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e3b50bc51bb7d0d"
              },
              {
                "subnet_id": "subnet-0b534eedb12879269"
              }
            ],
            "subnets": [
              "subnet-04e3b50bc51bb7d0d",
              "subnet-0b534eedb12879269"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-alb",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-alb",
              "Project": "cs6650-final"
            },
            "vpc_id": "vpc-01706b50151581940",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-kafka-nlb/26c80dbd46590811",
            "arn_suffix": "net/cs6650-final-kafka-nlb/26c80dbd46590811",
            "dns_name": "cs6650-final-kafka-nlb-26c80dbd46590811.elb.us-west-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-kafka-nlb/26c80dbd46590811",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "cs6650-final-kafka-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e3b50bc51bb7d0d"
              },
              {
                "subnet_id": "subnet-0b534eedb12879269"
              }
            ],
            "subnets": [
              "subnet-04e3b50bc51bb7d0d",
              "subnet-0b534eedb12879269"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-kafka-nlb",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-kafka-nlb",
              "Project": "cs6650-final"
            },
            "vpc_id": "vpc-01706b50151581940",
            "zone_id": "Z18D5FSROUN65G"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-prom-nlb/a5ac2dc21f18fd85",
            "arn_suffix": "net/cs6650-final-prom-nlb/a5ac2dc21f18fd85",
            "dns_name": "cs6650-final-prom-nlb-a5ac2dc21f18fd85.elb.us-west-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-prom-nlb/a5ac2dc21f18fd85",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "cs6650-final-prom-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e3b50bc51bb7d0d"
              },
              {
                "subnet_id": "subnet-0b534eedb12879269"
              }
            ],
            "subnets": [
              "subnet-04e3b50bc51bb7d0d",
              "subnet-0b534eedb12879269"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-prom-nlb",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-prom-nlb",
              "Project": "cs6650-final"
            },
            "vpc_id": "vpc-01706b50151581940",
            "zone_id": "Z18D5FSROUN65G"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/app/cs6650-final-alb/4d30102c99b6d164/fc8b9c3f1cc0e345",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-cart-api-tg/88b34baa970429fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/app/cs6650-final-alb/4d30102c99b6d164/fc8b9c3f1cc0e345",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/cs6650-final-alb/4d30102c99b6d164",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.cart_api",
            "aws_lb_target_group.cart_api",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/net/cs6650-final-kafka-nlb/26c80dbd46590811/64bac02ed0c64a7e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-kafka-tg/e0a4f61f697de060",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/net/cs6650-final-kafka-nlb/26c80dbd46590811/64bac02ed0c64a7e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-kafka-nlb/26c80dbd46590811",
            "mutual_authentication": [],
            "port": 9092,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.kafka",
            "aws_lb_target_group.kafka",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/net/cs6650-final-prom-nlb/a5ac2dc21f18fd85/580cbbcf753ecc84",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-prom-tg/356de0c28422b3e0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/net/cs6650-final-prom-nlb/a5ac2dc21f18fd85/580cbbcf753ecc84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-prom-nlb/a5ac2dc21f18fd85",
            "mutual_authentication": [],
            "port": 9090,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.prometheus",
            "aws_lb_target_group.prometheus",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cart_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-cart-api-tg/88b34baa970429fb",
            "arn_suffix": "targetgroup/cs6650-final-cart-api-tg/88b34baa970429fb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-cart-api-tg/88b34baa970429fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/cs6650-final-alb/4d30102c99b6d164"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs6650-final-cart-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-cart-api-tg",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-cart-api-tg",
              "Project": "cs6650-final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01706b50151581940"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-kafka-tg/e0a4f61f697de060",
            "arn_suffix": "targetgroup/cs6650-final-kafka-tg/e0a4f61f697de060",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-kafka-tg/e0a4f61f697de060",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-kafka-nlb/26c80dbd46590811"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs6650-final-kafka-tg",
            "port": 9092,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01706b50151581940"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-prom-tg/356de0c28422b3e0",
            "arn_suffix": "targetgroup/cs6650-final-prom-tg/356de0c28422b3e0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/cs6650-final-prom-tg/356de0c28422b3e0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/net/cs6650-final-prom-nlb/a5ac2dc21f18fd85"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs6650-final-prom-tg",
            "port": 9090,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "cs6650-final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01706b50151581940"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:route-table/rtb-0c9c06297998e99cb",
            "id": "rtb-0c9c06297998e99cb",
            "owner_id": "330214284546",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0354b82564b4830b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-public-rt",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-public-rt",
              "Project": "cs6650-final"
            },
            "timeouts": null,
            "vpc_id": "vpc-01706b50151581940"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0417c0d4c864d1c2e",
            "route_table_id": "rtb-0c9c06297998e99cb",
            "subnet_id": "subnet-04e3b50bc51bb7d0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02187c347ead47ec9",
            "route_table_id": "rtb-0c9c06297998e99cb",
            "subnet_id": "subnet-0b534eedb12879269"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:security-group/sg-082deb49880308f77",
            "description": "Allow HTTP inbound to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082deb49880308f77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cs6650-final-alb-sg",
            "name_prefix": "",
            "owner_id": "330214284546",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-alb-sg",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-alb-sg",
              "Project": "cs6650-final"
            },
            "timeouts": null,
            "vpc_id": "vpc-01706b50151581940"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:security-group/sg-0cade7128d26c1475",
            "description": "Allow traffic between ECS tasks and from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cade7128d26c1475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus NLB pass-through",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC internal (for NLB pass-through)",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [],
                "description": "From ALB on container port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082deb49880308f77"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Inter-task communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "cs6650-final-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "330214284546",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-ecs-tasks-sg",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-ecs-tasks-sg",
              "Project": "cs6650-final"
            },
            "timeouts": null,
            "vpc_id": "vpc-01706b50151581940"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:subnet/subnet-04e3b50bc51bb7d0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e3b50bc51bb7d0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330214284546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-public-us-west-2a",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-public-us-west-2a",
              "Project": "cs6650-final"
            },
            "vpc_id": "vpc-01706b50151581940"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:subnet/subnet-0b534eedb12879269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b534eedb12879269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330214284546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-public-us-west-2b",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-public-us-west-2b",
              "Project": "cs6650-final"
            },
            "vpc_id": "vpc-01706b50151581940"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:vpc/vpc-01706b50151581940",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abf69d32e16280de",
            "default_route_table_id": "rtb-05b41b661c650b613",
            "default_security_group_id": "sg-0c2caa3bbdfa8af24",
            "dhcp_options_id": "dopt-0e78d9bd3edd3a5a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01706b50151581940",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b41b661c650b613",
            "owner_id": "330214284546",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-vpc",
              "Project": "cs6650-final"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cs6650-final-vpc",
              "Project": "cs6650-final"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}